@@ -12,6 +12,8 @@ git-annex (5.20150508.2) UNRELEASED; urgency=medium
   * --quiet now makes progress output by rsync, wget, etc be quiet too.
   * Take space that will be used by running downloads into account when
     checking annex.diskreserve.
+  * Avoid accumulating transfer failure log files unless the assistant is
+    being used.
 
  -- Joey Hess <id@joeyh.name>  Mon, 11 May 2015 12:45:06 -0400
 
